--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,4 +1,15 @@
+# Dependencies
 node_modules/
 
-
+# Environment files
 .env
+.env.local
+
+# Logs
+logs
+*.log
+
+# Editor directories
+.vscode/
+.idea/
+.DS_Store
